metadata/sf-prod/force-app/main/default/objects/OpportunityContactRole/fields/Aurea_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Aurea_SF_ID__c</fullName>
    <description>Opportunity Contact Role ID in Aurea SFDC</description>
    <label>Migrated Aurea SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>