metadata/sf-prod/force-app/main/default/objects/OpportunityContactRole/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>LAMBDA-66312 a workaround to fetch created date in reports</description>
    <formula>CreatedDate</formula>
    <inlineHelpText>Created Date of this Contact role</inlineHelpText>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>