metadata/sf-prod/force-app/main/default/objects/OpportunityContactRole/fields/Invalid_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LAMBDA-52272 Field to be used by flow to capture whether the Primary contact is related to the Opportunity or Primary Partner</description>
    <inlineHelpText>Indicates whether the Contact is related to Primary Account or Related Account or not</inlineHelpText>
    <label>Invalid Primary Contact</label>
    <type>Checkbox</type>
</CustomField>